# varval

./: .gitignore  Makefile.am  Makefile.in  configure  configure.ac
src/: AlignedContig.cpp  AlignmentFragment.h  BEDPE.cpp  BEDPE.h  BreakPoint.cpp  BreakPoint.h  DiscordantCluster.cpp  Makefile.am  Makefile.in  ValidatorAlignedContig.cpp  ValidatorAlignedContig.h  ValidatorBamReader.cpp  ValidatorBamReader.h  ValidatorBreakPoint.h  readVCF.h  svabaRead.cpp  svabaRead.h  validator.cpp  varval.cpp  varval_params.h  varval_utils.cpp  varval_utils.h
src/old/: AlignedContig2.cpp  AlignedContig2.h  BreakPoint2.cpp  BreakPoint2.h
